MA-13 Fix user-messages component layout issue in IE

--- a/src/targets/meandall/styles/components/user-messages.less
+++ b/src/targets/meandall/styles/components/user-messages.less
@@ -2,7 +2,7 @@ user-messages {
   background: transparent;
   box-shadow:none;
   position:relative;
-  top:initial;
+  top:0;
   &.reservation-confirmation {
     // @note The image that this matches is set in a config file, if that image is updated this file was also need to reflect the change
     background: url("@{img-prefix}/section-images/RS12959_DUSIMM_Zimmer_STANDARD_05-scr.jpg");
